objects/TimeSlot.object
<CustomObject>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>(Hour(EndTime) - Hour(StartTime)) + ((Minute(EndTime) - Minute(StartTime))/60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Designated_Work_Boolean_Fields__c</fullName>
        <label>Designated Work Boolean Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Slot_Color__c</fullName>
        <label>Slot Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
                <value>
                    <fullName>Purple</fullName>
                </value>
                <value>
                    <fullName>Indigo</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Cyan</fullName>
                </value>
                <value>
                    <fullName>Teal</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Lime</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>Asphalt</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>